[project]
name = "morphology-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mypy>=1.11",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "torchvision>=0.24.1",
]
